<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">教务查询系统</string>
    <string name="course_introduce">"课程编号：%1$s
课程名称：
%2$s
开课年级：%3$s
开课学期：%4$s
考核方式：%5$s
\u0009\u0009\u0009课群：%6$s
学期学时：%7$s
学期学分：%8$s
是否学位：%9$s
课程类型：%10$s
开课模式：%11$s"</string>
    <string name="school_roll">"考生号：%1$s
学号：%2$s
姓名：%3$s
英文：%4$s
性别：%5$s
出生日期：%6$s
身份证号：%7$s
政治面貌：%8$s
民族：%9$s
专业编号：%10$s
专业名称：
%11$s
院系：%12$s
专业类别：%13$s
班级：%14$s
层次：%15$s
学习形式：%16$s
学制：%17$s
入学日期：%18$s
预计毕业日期：%19$s
"</string>
    <string name="base_url">http://202.118.31.241:8080/api</string>
    <string name="version">/v1</string>
    <string name="loading">正在加载数据，请稍候...</string>
    <string name="loadingNotice">正在加载公告</string>
    <string name="loadingLogin">正在登录</string>
    <string name="soft_update_no">此版本已是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍候更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="mon">一</string>
    <string name="tue">二</string>
    <string name="wen">三</string>
    <string name="thu">四</string>
    <string name="fri">五</string>
    <string name="sta">六</string>
    <string name="sun">日</string>
</resources>
